--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start-dev": "nodemon app.js"
+    "start-dev": "env-cmd -f ./config/dev.env nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/actionanand/node-all-rounder-course#readme",
   "devDependencies": {
+    "env-cmd": "^10.0.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
